_static/iphone.css:   item-details changed to table for better rendering on IE. _templates/constellation.html:   Sov data now displated. (Including pretty icons.)   Name of system no longer color-coded by security rating. _templates/include_stations.html:   Stations now show icons too. (For the corp owning them.) _templates/region.html:   Show any constellations with sovereignly. _templates/solarsystem.html:   Show name of sovereign alliance. _templates/trade_item.html:   Conversion of attribute display to a table. Icons look better now too. (Their own cell) ccp/models.py:   Added alliance model.   Added Alliance key to corporation.   Made many things into @properties.   Added icon methods to corporations, alliances, attributes, etc.   Non-item icons now return the white version. corp/models.py:   Removed as no way to make it work with dependencies both ways on ccp/models.py. settings.py:   database and security settings moved to non-versioned file.   static directory for files made os-dependent. (So it works on linux and my desktop.) user/models.py:   Method for eve character icons added. (No idea if it actually works yet.) util/alliance_graphics.py:   Mapping found on the EVE API Wiki site for alliance IDs to icons. util/api-loader.py:   Added loading of map sov data.   Added loading of all alliances.   Added loading of corporation -> alliance map. (Triggered by being an exec corp, or having a character with API key, or owning a station.)   Added a lot of try/except blocks to allow continuation on many errors or API bugs.

--- a/_static/iphone.css
+++ b/_static/iphone.css
@@ -170,6 +170,20 @@ dd {
 	color: #666;
 }
 
+.item-details th {
+	text-align: left;
+}
+
+.item-details td {
+	text-align: right;
+}
+
+.item-details th,
+.item-details td {
+	border-top: 1px #ddd solid;
+	vertical-align: middle;
+}
+
 .transaction-quantity {
 	font-weight: bold;
 	color: grey;
@@ -217,17 +231,17 @@ dd {
 .constellation .moons {
 	color: grey;
 	position: absolute;
-	left: 100px;
+	left: 95px;
 }
 
 .constellation .stations {
 	color: green;
 	position: absolute;
-	left: 170px;
+	left: 145px;
 	text-overflow: ellipsis;
 	overflow: hidden;
 	white-space: nowrap;
-	max-width: 120px;
+	max-width: 145px;
 }
 
 .region .systems {
